Deployment/Services/authentication-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-api
  template:
    metadata:
      labels:
        app: authentication-api
    spec:
      containers:
      - name: authentication-api
        image: jumanakj/arc-auth-kong:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-api-service
spec:
  selector:
    app: authentication-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
