Deployment/Services/configuration-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-api
  template:
    metadata:
      labels:
        app: configuration-api
    spec:
      containers:
      - name: configuration-api
        image: phadkesharanmatrixcomsec/arc-configuration:4.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: configuration-api-service
spec:
  selector:
    app: configuration-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
