Deployment/Services/test.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: web-spa-v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
