Deployment/Services/vpm-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpm-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpm-api
  template:
    metadata:
      labels:
        app: vpm-api
    spec:
      containers:
      - name: vpm-api
        image: phadkesharanmatrixcomsec/arc-vpm:3.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vpm-api-service
spec:
  selector:
    app: vpm-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
